Certified Kubernetes Administrator (CKA): Services, DNS, and Ingress Networking/course-07-services-ingress-gateway/m03-gateway-api/demo3-crds-and-gateway/globo-gateway-80.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: globo-gateway
  namespace: globomantics
spec:
  gatewayClassName: traefik
  listeners:
  - name: web
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
